-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14, 5.15, 6.0.0
-
None
We are seeing bogus device pixel ratio and QWindow sizes reported on embedded devices with eglfs.
For example, instead of dpr 1 and 1920x1080 one gets dpr ~1.692 and 1134x638. This wrong on a platform with no windowing system and no scaling and high dpi concepts.
The suspicion is that all platform plugins must get a change similar what was done for Android and Cocoa in https://codereview.qt-project.org/c/qt/qtbase/+/157174 , i.e. they must now override logicalBaseDpi() and return the same value as logicalDpi() in order to get a scale factor of 1. Otherwise the factor is logicalDpi() / QDpi(96, 96) which is never what one wants.
At minimum eglfs and linuxfb must be fixed up, but this may affect any other platform plugins as well.
Not sure about affected Qt versions, said patch is for 5.14 which is somewhat concerning...